--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,7 +47,8 @@ services:
       - "8888:8888"   # Prometheus metrics exposed by the collector
       - "8889:8889"   # Prometheus exporter metrics
       - "13133:13133" # health_check extension
-      - "4317:4317"   # OTLP gRPC receiver
+      - "4317:4317"   # OTLP HTTP receiver
+      - "4318:4318"   # OTLP gRPC receiver
       - "55679:55679" # zpages extension
     depends_on:
       - jaeger-all-in-one
