--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -10,14 +10,12 @@ exporters:
   prometheus:
     endpoint: "0.0.0.0:8889"
     const_labels:
-      label1: value1
-
+      service: "otel-collector"
   debug:
-
+     verbosity: detailed
   zipkin:
     endpoint: "http://zipkin-all-in-one:9411/api/v2/spans"
     format: proto
-
   otlp:
     endpoint: jaeger-all-in-one:4317
     tls:
