--- a/exp5/dbos-config.yaml
+++ b/exp5/dbos-config.yaml
@@ -4,7 +4,7 @@ name: dbos_experiments
 language: python
 runtimeConfig:
   start:
-    - "fastapi dev main.py"
+    - "fastapi run"
 database:
   hostname: ${PGHOST}
   port: ${PGPORT}
@@ -12,7 +12,7 @@ database:
   password: ${PGPASSWORD}
   app_db_name: ${PGDATABASE}
   migrate:
-    - alembic upgrade head
+    - alembic --config migrations/alembic.ini upgrade head
 telemetry:
   OTLPExporter:
     logsEndpoint: http://localhost:4317/v1/logs
