--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Ricardo Leal <ricleal@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 dbos = "^0.18.0"
 fastapi = "^0.115.7"
 pgcli = "^4.1.0"
