--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,6 +1,18 @@
+global:
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  evaluation_interval: 15s
 scrape_configs:
   - job_name: 'otel-collector'
-    scrape_interval: 5s
     static_configs:
       - targets: ['otel-collector:8889']
       - targets: ['otel-collector:8888']
+  - job_name: prometheus
+    honor_timestamps: true
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    metrics_path: /metrics
+    scheme: http
+    static_configs:
+    - targets:
+      - localhost:9090
