--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~3.11"
 dbos = "^0.18.0"
 fastapi = "^0.115.7"
 pgcli = "^4.1.0"
@@ -15,6 +15,7 @@ requests = "^2.32.3"
 websockets = "^14.2"
 psycopg2-binary = "^2.9.10"
 python-json-logger = "^3.2.1"
+boto3 = "^1.36.23"
 
 
 [tool.poetry.group.dev.dependencies]
