--- a/exp1/dbos-config.yaml
+++ b/exp1/dbos-config.yaml
@@ -11,6 +11,7 @@ database:
   username: ${PGUSER}
   password: ${PGPASSWORD}
   app_db_name: ${PGDATABASE}
+  sys_db_name: dbos_history
   migrate:
     - alembic upgrade head
 telemetry:
