--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-json-logger = "^3.2.1"
 boto3 = "^1.36.23"
 opentelemetry-instrumentation = "^0.51b0"
 faker = "^37.4.2"
+snakeviz = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
