--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,14 @@ boto3 = "^1.36.23"
 opentelemetry-instrumentation = "^0.51b0"
 faker = "^37.4.2"
 snakeviz = "^2.2.2"
+httpx = "^0.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.31.0"
 sqlacodegen = "3.0.0rc5"
 pytest = "^8.4.1"
+pytest-asyncio = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
