--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ faker = "^37.4.2"
 snakeviz = "^2.2.2"
 httpx = "^0.28.1"
 psutil = "^7.1.3"
+duckdb = "^1.4.3"
 
 
 [tool.poetry.group.dev.dependencies]
