--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,60 @@
-[tool.poetry]
+[project]
 name = "dbos-experiments"
 version = "0.1.0"
 description = ""
-authors = ["Ricardo Leal <ricleal@gmail.com>"]
+authors = [{ name = "Ricardo Leal", email = "ricleal@gmail.com" }]
 readme = "README.md"
-package-mode = false
+requires-python = ">=3.13"
+dependencies = [
+    "dbos>=2.8.0",
+    "fastapi>=0.124.0",
+    "pgcli>=4.1.0",
+    "requests>=2.32.3",
+    "websockets>=14.2",
+    "psycopg2-binary>=2.9.10",
+    "python-json-logger>=3.2.1",
+    "boto3>=1.36.23",
+    "opentelemetry-instrumentation>=0.51b0",
+    "faker>=37.4.2",
+    "snakeviz>=2.2.2",
+    "httpx>=0.28.1",
+    "psutil>=7.1.3",
+    "duckdb>=1.4.3",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-dbos = "2.6.0"
-fastapi = "^0.124.0"
-pgcli = "^4.1.0"
-requests = "^2.32.3"
-websockets = "^14.2"
-psycopg2-binary = "^2.9.10"
-python-json-logger = "^3.2.1"
-boto3 = "^1.36.23"
-opentelemetry-instrumentation = "^0.51b0"
-faker = "^37.4.2"
-snakeviz = "^2.2.2"
-httpx = "^0.28.1"
-psutil = "^7.1.3"
-duckdb = "^1.4.3"
+[project.optional-dependencies]
+dev = [
+    "ipython>=8.31.0",
+    "sqlacodegen==3.0.0rc5",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.2.0",
+    "fastapi-cli>=0.0.16",
+]
 
+[tool.uv]
+keyring-provider = "subprocess"
 
-[tool.poetry.group.dev.dependencies]
-ipython = "^8.31.0"
-sqlacodegen = "3.0.0rc5"
-pytest = "^8.4.1"
-pytest-asyncio = "^1.2.0"
-fastapi-cli = "^0.0.16"
+[tool.hatch.build.targets.wheel]
+packages = ["dbos_experiments"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = ["fastapi-cli==0.0.20", "ruff>=0.14.13", "ty>=0.0.12"]
+
+
+[tool.ruff]
+line-length = 127
+target-version = "py313"
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+ignore = []
+
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "auto"
